add commend post delete and update :)
